[tool.poetry]
name = "point-sort"
version = "0.1.0"
description = "Modified SORT tracking on 2D / 3D Point"
authors = ["Jonathan Yang <hi@jyang.cc>"]
readme = "README.md"
packages = [{include = "point_sort"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.16"
filterpy = "^1.4.5"
scipy = "^1.11.4"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.0"
isort = "^5.12.0"
types-tqdm = "^4.66.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true